<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/new_chat_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_chat_text"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="5dp"
        />

    <Button
        android:id="@+id/inputBtn"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/ok"
        android:textColor="#FFFFFF" />

</LinearLayout>